# micro-api/src/main/java/mabubu0203/com/github/catcafe/api/controller/cast/CastApiController.java
@@ -65,13 +65,13 @@ public class CastApiController implements CastApi {
             description = "キャスト詳細を1件取得する",
             operationId = "castFind",
             responses = {
-                    @ApiResponse(responseCode = "200", description = "正常系", content = @Content(schema = @Schema(implementation = CastDetail.class))),
+                    @ApiResponse(responseCode = "200", description = "正常系", content = @Content(schema = @Schema(implementation = CastFindResponse.class))),
                     @ApiResponse(responseCode = "400", description = "バリデーションエラー", content = @Content(schema = @Schema(implementation = ValidationResult.class))),
                     @ApiResponse(responseCode = "404", description = "Idが見つからない"),
             }
     )
     @Override
-    public CompletableFuture<ResponseEntity<CastDetail>> castFind(String cats, Integer storeId, Integer castId) {
+    public CompletableFuture<ResponseEntity<CastFindResponse>> castFind(String cats, Integer storeId, Integer castId) {
         return new CastFindRequestMapper(cats, storeId, castId)
                 .get()
                 .map(this.searchService::promise)
@@ -85,12 +85,12 @@ public class CastApiController implements CastApi {
             description = "キャストを取得する",
             operationId = "castSearch",
             responses = {
-                    @ApiResponse(responseCode = "200", description = "正常系"),
-                    @ApiResponse(responseCode = "400", description = "バリデーションエラー", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ValidationResult.class)))),
+                    @ApiResponse(responseCode = "200", description = "正常系", content = @Content(schema = @Schema(implementation = CastSearchResponse.class))),
+                    @ApiResponse(responseCode = "400", description = "バリデーションエラー", content = @Content(schema = @Schema(implementation = ValidationResult.class))),
             }
     )
     @Override
-    public CompletableFuture<ResponseEntity<List<CastDetail>>> castSearch(String cats, @Valid List<Integer> storeIds) {
+    public CompletableFuture<ResponseEntity<CastSearchResponse>> castSearch(String cats, @Valid List<Integer> storeIds) {
         return new CastSearchRequestMapper(cats, storeIds)
                 .get()
                 .map(this.searchService::promise)
