# micro-api/src/main/java/mabubu0203/com/github/catcafe/api/controller/cast/mapper/response/CastFindResponseMapper.java
@@ -3,19 +3,22 @@ package mabubu0203.com.github.catcafe.api.controller.cast.mapper.response;
 import mabubu0203.com.github.catcafe.api.service.cast.model.output.CastSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.FindResponseMapper;
 import org.openapitools.model.CastDetail;
+import org.openapitools.model.CastFindResponse;
 
-public class CastFindResponseMapper implements FindResponseMapper<CastSearchServiceOutput, CastDetail> {
+public class CastFindResponseMapper implements FindResponseMapper<CastSearchServiceOutput, CastFindResponse> {
 
     @Override
-    public CastDetail apply(CastSearchServiceOutput castSearchServiceOutput) {
+    public CastFindResponse apply(CastSearchServiceOutput castSearchServiceOutput) {
         return this.search();
     }
 
-    private CastDetail search() {
+    private CastFindResponse search() {
         var detail = new CastDetail();
         detail.setId(1L);
 
-        return detail;
+        var result = new CastFindResponse();
+        result.setCast(detail);
+        return result;
     }
 
 }
