# micro-api/src/main/java/mabubu0203/com/github/catcafe/api/controller/cast/mapper/response/CastSearchResponseMapper.java
@@ -3,24 +3,26 @@ package mabubu0203.com.github.catcafe.api.controller.cast.mapper.response;
 import mabubu0203.com.github.catcafe.api.service.cast.model.output.CastSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.SearchResponseMapper;
 import org.openapitools.model.CastDetail;
+import org.openapitools.model.CastSearchResponse;
 
 import java.util.ArrayList;
-import java.util.List;
 
-public class CastSearchResponseMapper implements SearchResponseMapper<CastSearchServiceOutput, List<CastDetail>> {
+public class CastSearchResponseMapper implements SearchResponseMapper<CastSearchServiceOutput, CastSearchResponse> {
 
     @Override
-    public List<CastDetail> apply(CastSearchServiceOutput castSearchServiceOutput) {
+    public CastSearchResponse apply(CastSearchServiceOutput castSearchServiceOutput) {
         return this.search();
     }
 
-    private List<CastDetail> search() {
+    private CastSearchResponse search() {
         var resultRest = new ArrayList<CastDetail>();
         var detail = new CastDetail();
         detail.setId(1L);
         resultRest.add(detail);
 
-        return resultRest;
+        var result = new CastSearchResponse();
+        result.setCasts(resultRest);
+        return result;
     }
 
 }
